// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="signUp-container"
>
  <AutoHeightContainer />
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      &lt;title&gt;Sign Up&lt;/title&gt;&lt;subtitle&gt;to join the conversation&lt;/subtitle&gt;
    </Bar>
  </Localized>
  <SubBar>
    <Localized
      button={
        <ForwardRef(forwardRef)
          color="primary"
          data-testid="gotoSignInButton"
          onClick={[Function]}
          size="small"
          variant="underlined"
        />
      }
      id="signUp-accountAvailableSignIn"
    >
      <ForwardRef(forwardRef)
        container={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        variant="bodyCopy"
      >
        Already have an account? &lt;button&gt;Sign In&lt;/button&gt;
      </ForwardRef(forwardRef)>
    </Localized>
  </SubBar>
  <Main
    data-testid="signUp-main"
  >
    <ForwardRef(forwardRef)
      size="oneAndAHalf"
    >
      <withContext(createMutationContainer(SignUpContainer)) />
      <OrSeparator />
      <ForwardRef(forwardRef)>
        <Relay(SignUpWithFacebookContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithGoogleContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders without email sign up 1`] = `
<div
  data-testid="signUp-container"
>
  <AutoHeightContainer />
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      &lt;title&gt;Sign Up&lt;/title&gt;&lt;subtitle&gt;to join the conversation&lt;/subtitle&gt;
    </Bar>
  </Localized>
  <SubBar>
    <Localized
      button={
        <ForwardRef(forwardRef)
          color="primary"
          data-testid="gotoSignInButton"
          onClick={[Function]}
          size="small"
          variant="underlined"
        />
      }
      id="signUp-accountAvailableSignIn"
    >
      <ForwardRef(forwardRef)
        container={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        variant="bodyCopy"
      >
        Already have an account? &lt;button&gt;Sign In&lt;/button&gt;
      </ForwardRef(forwardRef)>
    </Localized>
  </SubBar>
  <Main
    data-testid="signUp-main"
  >
    <ForwardRef(forwardRef)
      size="oneAndAHalf"
    >
      <ForwardRef(forwardRef)>
        <Relay(SignUpWithFacebookContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithGoogleContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;
